{
    "name": "PlayerSkillsInput",
    "maps": [
        {
            "name": "SkillsController",
            "id": "880b80dc-553b-4b7c-8f35-d7952b365dcf",
            "actions": [
                {
                    "name": "Skill1",
                    "type": "Button",
                    "id": "b163540f-6ef2-4e35-b813-7a1a6bb48c52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill2",
                    "type": "Button",
                    "id": "5dff8efe-69e5-4695-a03d-9eaed99d7e1b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill3",
                    "type": "Button",
                    "id": "b5da18b0-974b-463a-82c9-d32e0074f9eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b7a3d70f-15b7-44a0-8f69-33b36226b5c2",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "Skill1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd94467e-dd4d-4db9-97c5-3b2e69519923",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "Skill2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bdc0da1d-c674-4c10-8d28-98103995f5c4",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "Skill3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse+Keyboard",
            "bindingGroup": "Mouse+Keyboard",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}